[package]
name = "adventofcode"
version = "0.1.0"
authors = ["Peter Tseng <pht24@cornell.edu>"]
edition = "2021"

[features]
default = ["bigint"]
# default = []
bigint = ["dep:rug"]

[dependencies]
rug = { version = "1.22", optional = true }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "day14_parabolic_reflector_dish"
harness = false
